--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,7 +16,10 @@
         "symfony/framework-bundle": "8.0.*",
         "symfony/monolog-bundle": "^4.0",
         "symfony/runtime": "8.0.*",
-        "symfony/yaml": "8.0.*"
+        "symfony/twig-bundle": "8.0.*",
+        "symfony/yaml": "8.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
