--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,6 +15,7 @@
         "symfony/console": "8.0.*",
         "symfony/dotenv": "8.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "8.0.*",
         "symfony/framework-bundle": "8.0.*",
         "symfony/monolog-bundle": "^4.0",
         "symfony/runtime": "8.0.*",
