Разделил .env для докера и для хоста; Добавил форму, добавил логику сохранения ссылки, поправил вьюшку, добавил логику редиректа

--- a/backend/config/packages/twig.yaml
+++ b/backend/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
     file_name_pattern: '*.twig'
+    form_themes: ['bootstrap_5_layout.html.twig']
     globals:
         owner_name: 'proger0014'
         owner_url: 'https://github.com/proger0014'
