Добавил инфраструктуру для тестов; Поправил конфигурацию для базы

--- a/backend/.env.DevDocker
+++ b/backend/.env.DevDocker
@@ -15,7 +15,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
 APP_SECRET=047b82f994aeacb2a9177fdf6e04eda9
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
@@ -33,5 +32,10 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:!ChangeMe!@database:3306/app?serverVersion=9&charset=utf8mb4"
+DATABASE_USER=root
+DATABASE_PASSWORD=!ChangeMe
+DATABASE_HOST=database
+DATABASE_PORT=3306
+DATABASE_NAME=app
+DATABASE_DRIVER=pdo_mysql
 ###< doctrine/doctrine-bundle ###
