--- a/backend/config/packages/monolog.yaml
+++ b/backend/config/packages/monolog.yaml
@@ -2,7 +2,7 @@ monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
 
-when@dev:
+when@DevHost:
     monolog:
         handlers:
             main:
@@ -14,6 +14,8 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+
+when@DevDocker: &monolog_DevHost
 
 when@test:
     monolog:
