--- a/backend/.env.DevDocker
+++ b/backend/.env.DevDocker
@@ -15,6 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+APP_ENV=DevDocker
 APP_SECRET=047b82f994aeacb2a9177fdf6e04eda9
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
