--- a/backend/config/packages/monolog.yaml
+++ b/backend/config/packages/monolog.yaml
@@ -2,7 +2,7 @@ monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
 
-when@DevHost:
+when@DevHost: &monologDev
     monolog:
         handlers:
             main:
@@ -15,7 +15,7 @@ when@DevHost:
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
 
-when@DevDocker: &monolog_DevHost
+when@DevDocker: *monologDev
 
 when@test:
     monolog:
