--- a/backend/config/routes/framework.yaml
+++ b/backend/config/routes/framework.yaml
@@ -1,4 +1,6 @@
-when@dev:
+when@DevHost: &frameworkDev
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.php'
         prefix: /_error
+
+when@DevDocker: *frameworkDev
