--- a/backend/.env.DevDocker
+++ b/backend/.env.DevDocker
@@ -34,7 +34,7 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_USER=root
-DATABASE_PASSWORD=!ChangeMe
+DATABASE_PASSWORD=!ChangeMe!
 DATABASE_HOST=database
 DATABASE_PORT=3306
 DATABASE_NAME=app
