--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,3 +1,12 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
+
+DEFAULT_URI=http://localhost
+
+DATABASE_USER=root
+DATABASE_PASSWORD=!ChangeMe!
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_NAME=app
+DATABASE_DRIVER=pdo_mysql
