--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
   php-fpm:
     environment:
       APP_ENV: DevDocker
+      PHP_IDE_CONFIG: "serverName=php-link-shortener"
     build:
       dockerfile: backend/Dockerfile
       context: .
@@ -23,6 +24,7 @@ services:
       - app-network
     volumes:
       - "./backend:/usr/share/nginx/html:rw"
+      - "./.docker/php/php.ini:/usr/local/etc/php/conf.d/additional-conf.ini:r"
 
   database:
     image: mysql:${MYSQL_VERSION:-9}
