--- a/backend/config/packages/monolog.yaml
+++ b/backend/config/packages/monolog.yaml
@@ -1,15 +1,25 @@
 monolog:
     channels:
+        - persistence # Добавил в контейнер сервисом отдельный логгер monolog.logger.persistence
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
 
 when@DevHost: &monologDev
+    services:
+        # Регистрируя Процессор, который обогощает сообщение в логе дополнительными данными
+        Monolog\Processor\IntrospectionProcessor:
+            tags:
+                # Здесь тэг означает, что он сервис является monolog processor'ом и будет он применен только для канала persistence
+                # Также можно для хэндлеров определять точечно, вместо channel -> handler
+                - { name: monolog.processor, channel: persistence }
+
     monolog:
+        # Соответственно, формируется handler stack, последний из списка выполняется первее
         handlers:
             main:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
-                channels: ["!event"]
+                channels: ["!event"] # означает, что для всех каналов, кроме event, этот хэндлер будет работать
             console:
                 type: console
                 process_psr_3_messages: false
