--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -19,5 +19,9 @@ services:
     App\:
         resource: '../src/'
 
+    App\Integration\FaviconExtractor:
+        arguments:
+            - '%env(DEFAULT_FAVICON)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
