Рефакторинг FaviconExtractor: вычленил логику нормализации в LinkService; Добавил кэширование в FaviconExtractor; Вынес конфиг

--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -19,9 +19,9 @@ services:
     App\:
         resource: '../src/'
 
-    App\Integration\FaviconExtractor:
+    App\Config\LinkConfig:
         arguments:
-            - '%env(DEFAULT_FAVICON)%'
+            '$defaultIcon': '%env(DEFAULT_FAVICON)%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
