--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^3.6",
         "symfony/asset": "8.0.*",
         "symfony/asset-mapper": "8.0.*",
+        "symfony/cache": "8.0.*",
         "symfony/console": "8.0.*",
         "symfony/dotenv": "8.0.*",
         "symfony/flex": "^2",
