Добавил интеграционный тест на проверку FaviconExtractor; Подготовил проект к интеграционным тестам

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -10,3 +10,5 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_NAME=app
 DATABASE_DRIVER=pdo_mysql
+
+HAVE_FAVICON_URL=http://localhost:3030/site?mock_response=haveFavicon&mock_content_type=text/html
