Дополнил интеграционные тесты на FaviconExtractor

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -11,4 +11,6 @@ DATABASE_PORT=3306
 DATABASE_NAME=app
 DATABASE_DRIVER=pdo_mysql
 
-HAVE_FAVICON_URL=http://localhost:3030/site?mock_response=haveFavicon&mock_content_type=text/html
+FAVICON_HAVE_URL=http://localhost:3030/site?mock_response=haveFavicon&mock_content_type=text/html
+FAVICON_NOT_HAVE_URL=http://localhost:3030/site?mock_response=notHaveFavicon&mock_content_type=text/html
+FAVICON_NOT_SUCCESS_RESPONSE=http://localhost:3030/site?mock_response=404&mock_content_type=text/html
